--- a/config.env
+++ b/config.env
@@ -1,4 +1,6 @@
 NODE_ENV=development
 PORT=8000
 USERNAME=werner
-PASSWORD=123456
+DATABASE=mongodb+srv://werner:<PASSWORD>@cluster0.docm6.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE_LOCAL=mongodb://localhost:27017/natours
+DATABASE_PASSWORD=wxA6kwyMNcJdF8MI
